[4.3] MSTR-73: Fix and update styles for common controls (#454)
* Update checkbox design.
* Align bullet at navigation wizard nav menu.
* Disable text selection at app selector
* Fix header shadow on navigation wizard title bar over right content panel.
* Fix app logo misalign after resize.
* Update primary color. Also use variables whenever possible.

--- a/src/apps/common/submodules/conferenceViewer/conferenceViewer.scss
+++ b/src/apps/common/submodules/conferenceViewer/conferenceViewer.scss
@@ -83,12 +83,12 @@
 	width: 183px;
 }
 
-.view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable.active i.active-on, 
+.view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable.active i.active-on,
 .view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable i.active-off{
 	display:inline-block;
 }
 
-.view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable i.active-on, 
+.view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable i.active-on,
 .view-conference-wrapper .conference-user-wrapper .user-data .action-user.togglable.active i.active-off{
 	display: none;
 }
@@ -144,8 +144,8 @@
 }
 
 .view-conference-wrapper .conference-user-wrapper.speaking {
-	border: 1px solid #22a5ff;
-	box-shadow: 0px 0px 10px -1px #22a5ff;
+	border: 1px solid $primary-color;
+	box-shadow: 0px 0px 10px -1px $primary-color;
 }
 
 .view-conference-wrapper .conference-user-wrapper .icon-user {
