--- a/src/apps/common/submodules/navigationWizard/navigationWizard.scss
+++ b/src/apps/common/submodules/navigationWizard/navigationWizard.scss
@@ -6,9 +6,10 @@
 
 #navigation_wizard_wrapper .header {
 	display: flex;
+	position: relative;
 	justify-content: space-between;
 	padding: 13px 24px;
-	box-shadow: inset 0 -1px 0 0 #BCBCC2,
+	box-shadow: inset 0 -1px 0 0 $french-gray2,
 		0 1px 4px 0 rgba($woodsmoke, 0.24);
 }
 
@@ -28,10 +29,10 @@
 }
 
 #navigation_wizard_wrapper .right-content {
-	background-color: #F4F4F5;
+	background-color: $athens-gray;
 	margin-left: 281px;
-	border-bottom: 1px solid #c0c0c9;
-	border-left: 1px solid #c0c0c9;
+	border-bottom: 1px solid $input-border-color;
+	border-left: 1px solid $input-border-color;
 	min-height: calc(98vh - 200px);
 }
 
@@ -42,7 +43,7 @@
 #navigation_wizard_wrapper .footer {
 	margin-right: 25px;
 	margin-left: 281px;
-	border-left: 1px solid #c0c0c9;
+	border-left: 1px solid $input-border-color;
 	height: 70px;
 }
 
@@ -67,7 +68,7 @@
 	}
 
 	.fa-circle {
-		top: 6px;
+		top: 5px;
 		font-size: 9px !important;
 		height: 8px;
 		width: 10px;
@@ -144,13 +145,13 @@
 }
 
 #navigation_wizard_wrapper #cancel, #navigation_wizard_wrapper .back {
-	background: linear-gradient(-180deg, $white 0%, #F4F4F5 100%);
+	background: linear-gradient(-180deg, $white 0%, $athens-gray 100%);
         border: 1px solid $french-gray2;
 	color: $midgray2;
 }
 
 #navigation_wizard_wrapper #next {
-	background: #2297ff;
+	background: $primary-color;
 	border: 1px solid #006bca;
 	height: 38px;
 	color: $woodsmoke;
