--- a/src/apps/core/style/app.scss
+++ b/src/apps/core/style/app.scss
@@ -227,6 +227,7 @@ body,
 	.core-topbar #main_topbar_current_app_icon {
 		transform: none;
 		vertical-align: middle;
+		margin-bottom: 5px;
 	}
 	.core-topbar #main_topbar_current_app_name,
 	.core-topbar #main_topbar_trial {
