--- a/src/css/partials/_base.scss
+++ b/src/css/partials/_base.scss
@@ -1,6 +1,6 @@
 /* _colors.scss */
 /* unique color names */
-$dodger-blue: #22A5FF;
+$dodger-blue: #2297FF;
 $french-pass: #B8DEFF;
 $emerald: #33DB24;
 $sunglow: #FFCC33;
